docs/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-app-ingress
  namespace: products-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "store.acme.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-app-service
                port:
                  number: 80
